@@ -7,6 +7,8 @@ What's New in astroid 4.0.0?
 ============================
 Release date: TBA
 
+* Handle deprecated `bool(NotImplemented)` cast in const nodes.
+
 * Add support for boolean truthiness constraints (`x`, `not x`) in inference.
 
   Closes pylint-dev/pylint#9515
